# LinuxAgent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_CN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Makefile  README.md  README_CN.md  README_EN.md  ROADMAP.md  SECURITY.md  SECURITY_CN.md  blog.md  config.yaml  constraints.txt  linuxagent.py  pyinstaller.spec  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  bug_report_cn.yml  config.yml  feature_request.yml  feature_request_cn.yml  provider_compatibility.yml  roadmap_task.yml  runbook_contribution.yml  security_report.yml  user_feedback.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template_cn.md
.github/workflows/: ci.yml  release.yml
.work/: README.md
.work/change/: 2026-04-23-adopt-langgraph-harness.md  2026-04-23-config-yaml-only.md  2026-04-23-directory-layout.md  2026-04-23-doc-hardening.md  2026-04-23-docs-reconciliation.md  2026-04-23-drop-pytorch-stack.md  2026-04-23-human-in-the-loop.md  2026-04-25-plan7-10-roadmap-split.md  2026-04-25-plan8-policy-engine.md  2026-04-25-plan9-command-plan-runbooks.md  2026-04-26-commit-message-no-plan-prefix.md  2026-04-26-plan10-telemetry-audit.md  2026-04-26-runbook-graph-integration.md  2026-04-26-ssh-remote-command-hardening.md  2026-04-28-ai-owned-rules-and-memory.md  2026-04-28-direct-chat-intent-routing.md  2026-04-28-failed-plan-repair-loop.md  2026-04-28-multi-step-plan-continuation.md  2026-04-29-architecture-doc-refresh.md  2026-05-02-local-llm-provider.md  2026-05-17-runtime-quality-hardening.md  TEMPLATE.md
.work/design/: architecture.md
.work/plan/: Plan1.md  Plan10.md  Plan11.md  Plan12.md  Plan2.md  Plan3.md  Plan4.md  Plan5.md  Plan6.md  Plan7.md  Plan8.md  Plan9.md  PlanC.md  PlanC11.md  PlanC12.md  PlanC13.md  PlanC14.md  PlanC15.md
.work/prompt/: README.md
.work/rule/: baseline.md  python.md
benchmarks/: policy-benchmark.md  policy_benchmark.py
configs/: default.yaml  example.yaml  policy.default.yaml
docs/: README.md  development.md  migration-v3-to-v4.md  migration-v3-to-v4_CN.md  quickstart.md  release.md  release_CN.md  skills.md  threat-model_CN.md
docs/design/: mcp-server.md  sandbox-landlock.md  ts-ssh-library-decision.md  typescript-v5-progressive-rewrite.md
docs/en/: README.md  development.md  migration-v3-to-v4.md  operator-safety.md  production-readiness.md  provider-matrix.md  quickstart.md  red-team.md  release.md  runbook-authoring.md  threat-model.md  typescript-v5.md
docs/releases/: v4.0.0.md  v4.0.0_CN.md  v4.1.0.md  vNext.md
docs/zh/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  auto-wizard.md  development.md  migration-v3-to-v4.md  operator-safety.md  production-readiness.md  provider-matrix.md  quickstart.md  release.md  runbook-authoring.md  threat-model.md  typescript-v5.md
docs/zh/releases/: v4.0.0.md  v4.1.0.md
legacy/: README.md
legacy/src_v3/: __init__.py
legacy/src_v3/executors/: linux_command.py
legacy/src_v3/intelligence/: context_manager.py  (+1 more)
prompts/: analysis.md  direct_answer.md  direct_answer_review.md  file_patch_repair.md  intent_router.md  memory_stage1.md  planner.md  planner_gate.md  product_context.md  product_context_minimal.md  repair.md  system.md  wizard_planner.md  wizard_response.md
prompts/manifest/: cache.md  config.md  execution.md  identity.md  limits.md  memory.md  network.md  planning.md  safety.md  session_resume.md  tools.md  usage.md
runbooks/: cert.yaml  container.yaml  disk.yaml  load.yaml  logs.yaml  memory.yaml  os.yaml  packages.yaml  port.yaml  service.yaml  system_health.yaml
scripts/: bootstrap.sh  check_arch_boundaries.py  check_architecture_budget.py  check_code_rules.py  check_sandbox_rules.py  check_ts_redlines.mjs  eval_record.py  export_python_harness_fixtures.py  export_python_policy_fixtures.py  i18n_audit.py  release_check.py  verify_wheel_install.sh
src/: agent.py  config.py  logger.py
src/intelligence/: __init__.py  command_learner.py  knowledge_base.py  nlp_enhancer.py  recommendation_engine.py
src/interfaces/: command_executor.py  user_interface.py
src/linuxagent/: __init__.py  __main__.py  active_view.py  audit.py  audit_inspect.py  audit_sink.py  budget.py  cli.py  command_review.py  container.py  context_injection.py  event_replay.py  execution_display.py  llm_calls.py  logger.py  mcp_server.py  mcp_tools.py  network_fetch.py  network_policy.py  operating_manifest.py  pending_input.py  pending_request.py  product_context.py  prompt_history.py  prompts_loader.py  response_guard.py  runtime_control.py  runtime_events.py  telemetry.py  turn_context.py  turn_history.py  user_input.py
src/log_analysis/: log_parser.py
src/providers/: deepseek.py  openai.py
src/ui/: console.py
tests/: conftest.py  test_log_parser.py
tests/eval/: test_eval_record.py  test_intent_router_eval.py
tests/harness/: README.md  __init__.py  runner.py  test_scenarios.py
tests/integration/: __init__.py  test_agent_graph.py  test_agent_runtime.py  test_command_exec.py  test_ssh.py
tests/red_team/: __init__.py  test_network_fetch_ssrf.py  test_policy_attacks.py
tests/unit/: test_active_view.py  test_audit.py  test_audit_inspect.py  test_budget.py  test_cli_and_container.py  test_command_review.py  test_config.py  test_context_injection.py  test_event_replay.py  test_execution_display.py  test_framework_ready.py  test_logger.py  test_mcp_server.py  test_monitoring_exports.py  test_network_fetch.py  test_network_policy.py  test_operating_manifest.py  test_pending_input.py  test_pending_request.py  test_prompt_history.py  test_prompts_loader.py  test_response_guard.py  test_runtime_control.py  test_runtime_events.py  test_static_rules.py  test_telemetry.py  test_ts_cutover_staging.py  test_turn_history.py  test_typescript_v5_docs.py  test_user_input.py
ts/: biome.json  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
ts/parity/: tsconfig.json
(+396 files in other folders)
